Update, desktop view almost ready

--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
       <p>000</p>
     </div>
     <div class="cardInfo">
-      <div>
-        <p>CARDHOLDER NAME</p>
-        <input class="name" type="text" placeholder="e.g. Jane Appleseed">
+      <div class="cardWrapper">
+        <div>
+          <p>CARDHOLDER NAME</p>
+          <input class="name" type="text" placeholder="e.g. Jane Appleseed">
+        </div>
+        <div>
+          <p>CARD NUMBER</p>
+          <input class="cardNumber" type="text" placeholder="e.g. 1234 5678 9123 0000">
+        </div>
+        <div>
+          <p>Exp. Date (MM/YY)</p>
+          <p>CVC</p>
+          <input class="dateMM" type="text" placeholder="MM">
+          <input class="dateYY" type="text" placeholder="YY">
+          <input class="cvc" type="text" placeholder="e.g. 123">
+        </div>
+        <button>Confirm</button>
       </div>
-      <div>
-        <p>CARD NUMBER</p>
-        <input class="cardNumber" type="text" placeholder="e.g. 1234 5678 9123 0000">
-      </div>
-      <div>
-        <p>Exp. Date (MM/YY)</p>
-        <p>CVC</p>
-        <input class="dateMM" type="text" placeholder="MM">
-        <input class="dateYY" type="text" placeholder="YY">
-        <input class="cvc" type="text" placeholder="e.g. 123">
-      </div>
-      <button>Confirm</button>
     </div>
   </section>
 
