Update to mechanics.

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
         <div>
           <p>CARDHOLDER NAME</p>
           <input data-input="1" class="name" type="text" placeholder="e.g. Jane Appleseed">
+          <p class="wrongFormula">Wrong format, letters only</p>
         </div>
         <div>
           <p>CARD NUMBER</p>
           <input data-input="2" class="cardNumber" type="text" placeholder="e.g. 1234 5678 9123 0000">
+          <p class="wrongFormula">Wrong format, numbers only</p>
         </div>
         <div>
           <p>Exp. Date (MM/YY)</p>
@@ -44,6 +46,8 @@
           <input data-input="3" class="dateMM" type="text" placeholder="MM">
           <input data-input="4" class="dateYY" type="text" placeholder="YY">
           <input data-input="5" class="cvc" type="text" placeholder="e.g. 123">
+          <p class="wrongFormula">Wrong format</p>
+          <p class="wrongFormula">Wrong format</p>
         </div>
         <button>Confirm</button>
       </div>
