--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="backCard">
       <p data-index='5'>000</p>
     </div>
-    <div class="cardInfo">
+    <section class="startState">
       <div class="cardWrapper">
         <div>
           <p>CARDHOLDER NAME</p>
@@ -50,18 +50,22 @@
           <input data-input="5" class="cvc" maxlength="3" type="text" placeholder="e.g. 123">
           <p class="wrongFormula">Wrong format</p>
           <p class="wrongFormula">Wrong format</p>
+          <button>Confirm</button>
         </div>
-        <button>Confirm</button>
       </div>
-      <section class="completeState noActive"><img src="images/icon-complete.svg" alt="complete icon">
-        <div class="smallWrapper">
-          <h1>THANK YOU!</h1>
-          <p class="textUnderH1">We've added your card details</p>
-        </div>
-        <button class="button">Continue</button>
-    </div>
+    </section>
+    <section class="completeState noActive"><img src="images/icon-complete.svg" alt="complete icon">
+      <div class="smallWrapper">
+        <h1>THANK YOU!</h1>
+        <p class="textUnderH1">We've added your card details</p>
+      </div>
+      </div>
+      <button>Confirm</button>
+    </section>
   </section>
-  </section>
+
+
+
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
